<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">SBIAutomate</string>
    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <string name="make_appointment">Make Appointment</string>
    <string name="schedule_appointment">Schedule an Appointment</string>
    <string name="schedule">Schedule</string>


    <string name="appointment_date">Appointment Date:</string>
    <string name="appointment_time">Appointment Time:</string>
    <string name="branch_details">Branch Details:</string>

    <string name="select_date">Select Appointment Date</string>
    <string name="select_time">Select Appointment Time</string>
    <string name="select_branch">Select Branch</string>
    <string name="your_query">Your Query?</string>
    <string name="query_hint">Enter your Query here</string>
    <string name="confirm">Confirm Appointment</string>
    <string name="text"></string>
    <string name="welcome_mr_john_doe">Welcome MR. JOHN DOE</string>
    <string name="last_login">Last login from mobile : 14-03-2018 03:27:14 PM GMT +05:30</string>
    <string name="close_button">close</string>
    <string name="ticket">ticket_top</string>
    <string name="sbi_logo">SBI Logo</string>
    <string name="layout_bottom_curve">layout_bottom_curve</string>


</resources>
